src/css/style.css
@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);

body {
    background-color: #0e0e0e;
    color: whitesmoke;
    font-family: Poppins, sans-serif;
    padding: 1rem;

    @media (min-width: 50rem) {
        height: 100vh;
        padding: 2rem;
    }
}

button {
    font-family: Poppins, sans-serif;
}

.chess {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    @media (min-width: 50rem) {
        height: 100%;
        flex-direction: row;
        justify-content: center;
    }
}

.board_panel {
    flex: 0 1 min(calc(100vh - 7.5rem), 50vw);
    display: flex;
    flex-direction: column;
    gap: 1rem;

    @media (min-width: 50rem) {
        order: 2;
    }
}

.board {
    width: 100%;
    aspect-ratio: 1;
    border-radius: 1rem;
}

.moves_panel {
    display: flex;
    flex-direction: column;
    gap: 1rem;

    @media (min-width: 50rem) {
        width: 25rem;
        order: 3;
    }
}

.control_panel {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1rem;

    @media (min-width: 50rem) {
        width: 18rem;
        order: 1;
    }
}

.improvements {
    overflow-y: auto;
    line-height: 1.5;
}

.improvements h1 {
    margin-top: 3rem;
    font-size: 1.5rem;
    font-weight: 600;
}
.improvements h1:first-child {
    margin-top: 0;
}
.improvements p {
    font-style: italic;
    margin-top: 1rem;
}

.playmode {
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 1rem;
}

.playmode button {
    display: flex;
    justify-content: space-evenly;
    align-items: center;

    /*Draw the button background*/
    background-color: #222;
    border: 1px solid #222;
    padding: 0.8rem 0.3rem;
    border-radius: 1.4rem;

    /*Draw the text*/
    color: whitesmoke;
    font-size: 1.2rem;
    font-weight: 600;
}

.playmode_arrow {
    visibility: hidden;
}

.playmode_arrow::before {
    content: '▶';
}

.header {
    display: flex;
    justify-content: space-between;
}

.next_player {
    display: flex;
    align-items: center;
}

.next_player,
.evaluation {
    background-color: #222;
    border-radius: 1rem;
    padding: 0.5rem 1rem;
}

.white_to_move,
.black_to_move {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.evaluation {
    display: flex;
    align-items: center;
}

.square {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 0.75rem;
}
.white_to_move .square {
    background-color: whitesmoke;
}
.black_to_move .square {
    background-color: #000;
}

.moves {
    flex-grow: 1;
    background-color: #222;
    border-radius: 1rem;
    padding: 2.5rem 2rem;
    overflow-y: auto;

    display: grid;
    grid-template-columns: 1fr 3fr 3fr;
    grid-auto-rows: 1.8rem;

    align-items: center;
    justify-items: center;
    align-content: start;
    gap: 0.25rem;
}

.moves::-webkit-scrollbar, .improvements::-webkit-scrollbar {
    width: 0.8rem;
}

.moves::-webkit-scrollbar-thumb, .improvements::-webkit-scrollbar-thumb{
    background: whitesmoke;
    border-radius: 1rem;
}

.move {
    cursor: pointer;
    border-radius: 0.5rem;
    padding: 0.4rem 1.5rem;
    border: thin solid transparent;
    min-width: 2rem;
    text-align: center;
}

.move:hover {
    background-color: #0e0e0e;
    border-color: #888;
}

.currentMove {
    font-weight: 700;
    border-color: whitesmoke;
}

.actions {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    font-size: 3rem;
}

.actions button {
    user-select: none;

    /*Draw the button background*/
    background-color: #222;
    border: 1px solid #222;
    padding: 0.2rem 0;
    border-radius: 1.5rem;

    /*Draw the text*/
    color: whitesmoke;
    font-size: 2.5rem;
}

.actions button:disabled {
    color: rgb(119, 119, 119);
}

.actions button:hover:not(:disabled),
.playmode button:hover {
    background-color: #444;
    border: 1px solid #888;

    cursor: pointer;
}

